--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bpf-program-template"
+name = "solana-deposit-withdraw"
 version = "0.1.0"
 edition = "2021"
 license = "WTFPL"
@@ -7,9 +7,7 @@ publish = false
 
 [dependencies]
 solana-program = "=1.10.2"
-
-[features]
-test-bpf = []
+arrayref = "0.3.6"
 
 [dev-dependencies]
 assert_matches = "1.4.0"
