--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ publish = false
 [dependencies]
 solana-program = "=1.10.2"
 arrayref = "0.3.6"
+spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
 
 [dev-dependencies]
 assert_matches = "1.4.0"
